packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_strip_exports_unused.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1655
expression: output
---
==INPUT==


import { component$ } from '@builder.io/qwik';
import mongodb from 'mongodb';

export const onGet = () => {
    const data = mongodb.collection.whatever;
    return {
        body: {
        data
        }
    }
};

export default component$(()=> {
    return <div>cmp</div>
});

============================= test.tsx ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const onGet = ()=>{
    throw "Symbol removed by Qwik Optimizer, it can not be called from current platform";
};
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test_component_luxexe0dqrg"), "test_component_LUXeXe0DQrg"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;aAIa;;;AASb,6BAAe,0GAEZ\"}")
============================= test_component_luxexe0dqrg.tsx (ENTRY POINT)==

export const test_component_LUXeXe0DQrg = ()=>{
    return <div>cmp</div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"0CAa0B;IACtB,QAAQ,IAAI,GAAG,EAAE;AACrB\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test_component_luxexe0dqrg",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    244,
    278
  ]
}
*/
== DIAGNOSTICS ==

[]
