packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_with_style.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 494
expression: output
---
==INPUT==


import { $, component$, useStyles$ } from '@builder.io/qwik';

export const Foo = component$(() => {
    useStyles$('.class {}');
    return (
        <div class="class"/>
    );
}, {
    tagName: "my-foo",
});

============================= foo_component_usestyles_pv9tscbihw8.tsx (ENTRY POINT)==

export const Foo_component_useStyles_pV9TSCBIhw8 = '.class {}';


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mDAIe\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_useStyles_pV9TSCBIhw8",
  "entry": null,
  "displayName": "Foo_component_useStyles",
  "hash": "pV9TSCBIhw8",
  "canonicalFilename": "foo_component_usestyles_pv9tscbihw8",
  "extension": "tsx",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    118,
    129
  ]
}
*/
============================= foo_component_htdrsvublie.tsx (ENTRY POINT)==

import { qrl } from "@builder.io/qwik";
import { useStylesQrl } from "@builder.io/qwik";
export const Foo_component_HTDRsvUbLiE = ()=>{
    useStylesQrl(/*#__PURE__*/ qrl(()=>import("./foo_component_usestyles_pv9tscbihw8"), "Foo_component_useStyles_pV9TSCBIhw8"));
    return <div class="class"/>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B;IAC1B;IACA,QACK,IAAI,MAAM;AAEnB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "foo_component_htdrsvublie",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    95,
    182
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./foo_component_htdrsvublie"), "Foo_component_HTDRsvUbLiE"), {
    tagName: "my-foo"
});


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,wGAKhB;IACC,SAAS;AACb,GAAG\"}")
== DIAGNOSTICS ==

[]
